Fri Aug  6 13:42:39 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/IFRService/IFR_Service_Utils.cpp(valid_creation):
        
          Skipped call to pre_exist() check if the new entry represents
          an IDL module, since modules may be reopened. This bug (reported
          by Bogdan Jeram <bjeram at eso dot org>) was somehow
          reintroduced since 1.7.8. This fix handles any reopened
          module, and closes [BUGID:3881].

Thu Aug  5 13:25:00 UTC 2010  Build CZar  <buildczar at prismtech dot com>

        * tao/Valuetype/AbstractBase.h:

          Removed hard-coded 'inline' from declaration of _decr_refcount().

Wed Aug  4 20:52:39 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_util.cpp:
        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be_include/be_global.h:
        
          New IDL compiler option -Sg, which disables the generation of
          unique extensions on header file preprocessor guards. These
          changes are from a patch supplied by Bogdan Jeram
          <bjeram at eso dot org>, and close [BUGID:3867].
          
        * docs/compiler.html:
        
          Updated IDL compiler options table.

Wed Aug  4 19:24:15 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/rtcosscheduling.mpb:
        * orbsvcs/orbsvcs/RTCosScheduling:
        * orbsvcs/orbsvcs/RTCosScheduling.idl:
        * orbsvcs/orbsvcs/RTCosScheduling.mpc:
        * orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_ClientScheduler_i.h:
        * orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_ClientScheduler_i.cpp:
        * orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_PCP_Manager.h:
        * orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_PCP_Manager.inl:
        * orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_PCP_Manager.cpp:
        * orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_ServerScheduler_i.h: